# ask_jeremy_v3

./: .gitattributes  .gitignore  README.md  entities.json  jeremy.md  mempalace.yaml  setup-dev.ps1
.agents/skills/amo-summary-2026/: SKILL.md
.agents/skills/bank-score-2022/: SKILL.md
.agents/skills/data-analysis/: SKILL.md
.agents/skills/family-knowledge/: SKILL.md
.agents/skills/person-wiki-knowledge/: SKILL.md
.agents/skills/snowflake-datawarehouse/: SKILL.md  tables_to_prepare.txt
.agents/skills/snowflake-datawarehouse/references/: cli_daily_monitoring_reporting.md  common_account_application_details.md  dim_account.md  dim_underwriting_bank_model_validation.md  fct_order.md  fct_repayment_request.md  risk_credit_changes.md  stg_batchoperations_account_daily_summary.md  stg_databricks_clv_behsc_scoring.md  (+3 more)
.claude/: settings.local.json
.claude/plans/: snug-orbiting-patterson.md
backend/: .env.example  README.md  mcp.json  pyproject.toml
backend/src/ask_jeremy_backend/: __init__.py  analysis.py  artifacts.py  config.py  database.py  llm.py  main.py  mcp_tools.py  model_catalog.py  schemas.py  sessions.py  tools.py  verification.py  warehouse_policy.py  working_memory.py
backend/src/ask_jeremy_backend/skills/: __init__.py  activation.py  catalog.py  discovery.py  models.py  parser.py  prompting.py
backend/tests/: test_config.py  test_database.py  test_mcp_tools.py  test_sessions.py  test_working_memory.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  api.ts  styles.css  types.ts
