[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ask-jeremy-backend"
version = "0.1.0"
description = "Session-based chat backend for the Ask Jeremy analytical agent."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "langchain>=1.2.0",
    "langchain-anthropic>=1.3.0",
    "langchain-openai>=1.1.0",
    "langgraph>=1.1.0",
    "langgraph-checkpoint-sqlite>=3.0.0",
    "matplotlib>=3.9.0",
    "pydantic-settings>=2.4.0",
    "plotly>=5.24.0",
    "snowflake-connector-python>=3.12.0",
    "uvicorn[standard]>=0.30.0",
]

[tool.setuptools.packages.find]
where = ["src"]
